--- a/GraphicalUserInterface/MainWindow.xaml
+++ b/GraphicalUserInterface/MainWindow.xaml
@@ -4,11 +4,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:TP.ConcurrentProgramming.Presentation.ViewModel;assembly=TP.ConcurrentProgramming.PresentationViewModel"
+        xmlns:presentationView="clr-namespace:TP.ConcurrentProgramming.PresentationView"
         mc:Ignorable="d"
         Title="Presentation layer targeting reactive behaviour" Height="auto" Width="auto">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
+    <Window.Resources>
+        <presentationView:ColorConverter x:Key="colorConverter"></presentationView:ColorConverter>
+    </Window.Resources>
     <StackPanel>
         <Border BorderThickness="4" BorderBrush="Green" Height="420" Width="400">
             <ItemsControl ItemsSource="{Binding Balls}">
@@ -19,7 +23,7 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Ellipse Width= "{Binding Diameter}" Height="{Binding Diameter}" Fill="Blue" />
+                        <Ellipse Name="Ball" Width= "{Binding Diameter}" Height="{Binding Diameter}" Fill="{Binding Mass, Converter = '{StaticResource colorConverter}' }"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
                 <ItemsControl.ItemContainerStyle>
